# membramoney

./: .gitignore  Dockerfile  GLOBAL_MACHINE_APPRAISAL.md  Neomorphic Dark Dashboard.md  ORGANIZATION_SUMMARY.md  README.md  README_ORGANIZED_DOWNLOADS.md  SECURITY_WARNING.md  STATUS.md  SYSTEM_APPRAISAL.md  anchor_to_solana.py  app.py  cartman.csv  check_futures_balance.py  check_futures_contracts.py  check_futures_v2.py  close_shib_positions.py  dashboard.html  debug_contracts.py  debug_futures.py  events.jsonl  file_level_appraisal.json  flow_diagram.txt  futures_market_maker.py  gate_futures_market_maker.py  gate_market_maker_live.py  gate_mm_events.jsonl  global_machine_appraisal.py  inspect_positions.py  membra_agent.py  membra_corpus_engine.py  membra_dashboard.py  membra_supervisor.py  micro_futures_trader.py  micro_notional_spot_trader.py  paper_futures_bot.py  push_to_github.sh  run_network.py  solana_liquidity_agent.py  test_3_agent_consensus.py  (+9 more)
01_Trading_Systems/: gate_micro_mm.py  gate_microcap_hedge_engine_fixed.py  real_market_maker.py
02_AI_Agents/: agent.py  agent_ast.py  agent_patch.py  agent_requirements.txt  agent_safe.py
02_AI_Agents/jupyter-distributed-kernel/: .env.example  247_DEPLOYMENT.md  HUGGINGFACE_DEPLOYMENT.md  README.md  SPACE_README.md  STREAMING_API.md  app.py  deploy_to_huggingface.py  distkernel.service  distkernel_notebook.py  distkernel_notebook_single.py  huggingface_app.py  huggingface_requirements.txt  onchain_profit_agent.py  pyproject.toml  requirements.txt  start_distkernel.sh  stream_client.py  test_e2e.py
02_AI_Agents/jupyter-distributed-kernel/distkernel/: __init__.py  kernel.py  protocol.py  provisioner.py
02_AI_Agents/jupyter-distributed-kernel/distkernel/gateway/: __init__.py  agent_memory.py  auth.py  demo.py  demo_v2.py  google_auth.py  ollama.py  server.py
02_AI_Agents/jupyter-distributed-kernel/distkernel/gateway/static/: notebook.css  notebook.html  notebook.js
02_AI_Agents/jupyter-distributed-kernel/distkernel/kernelspec/: kernel.json
02_AI_Agents/jupyter-distributed-kernel/distkernel/labextension/: install.json  package.json  tsconfig.json
02_AI_Agents/jupyter-distributed-kernel/distkernel/labextension/src/: index.ts
02_AI_Agents/jupyter-distributed-kernel/distkernel/worker/: __init__.py  agent.py
03_Documentation/: AGENT_AST_SETUP.md  AGENT_AST_SUMMARY.md  AGENT_COMPARISON.md  AGENT_MIGRATION.md  AGENT_PATCH_SETUP.md  AGENT_PATCH_SUMMARY.md  AGENT_SAFE_BUNDLE_SUMMARY.md  AGENT_SAFE_PIPELINE_SUMMARY.md  AGENT_SAFE_SANDBOX_SUMMARY.md  AGENT_SAFE_SETUP.md  AGENT_SAFE_SUMMARY.md  AGENT_SETUP.md  AGENT_SUMMARY.md  API_KEY_TROUBLESHOOTING.md  BUYER_SUMMARY.md  CHANGELOG.md  CHAT_PROVENANCE_SUMMARY.md  CLEANSTAT_FINAL_SUMMARY.md  CLEANSTAT_INFRASTRUCTURE_SUMMARY.md  CLEANSTAT_PRODUCTION_HARDENED_SUMMARY.md  CLEANSTAT_PROGRESS_UPDATE.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_PACKAGE_SUMMARY.md  FLAGSHIP_BOT_AUDIT.md  FLAGSHIP_BOT_REFACTOR_ROADMAP.md  GATE_HEDGE_ENGINE_DELIVERABLE.md  GOOGLE_DRIVE_INTEGRATION_GUIDE.md  GPTBRIDGE_INSTALL.md  HUGGINGFACE_DEPLOYMENT_GUIDE.md  KNOWN_ISSUES.md  METAMASK_BRIDGE_README.md  METAMASK_BRIDGE_SCAFFOLD_SUMMARY.md  NEW_LANGUAGE_PROPOSAL.md  OLLAMA_VISION_AGENT_SETUP.md  OLLAMA_VISION_SUMMARY.md  ORGANIZATION_SUMMARY.md  PAPER_FILL_SIMULATION_PATCH.md  PRODUCTION_PORTFOLIO_SUMMARY.md  README_GATE_HEDGE_ENGINE.md  README_TRADING_SYSTEM.md  (+11 more)
05_Config_Files/: ## Core product sentence  .aider.conf.yml  .env.example  .gitignore
06_Projects/: check_gateio_positions.py  metamask_python_bridge.py  ollama_vision_agent.py  ollama_vision_agent_with_memory.py  ollama_vision_requirements.txt  serve_chatgpt.py  setup_google_oauth.py  setup_kamino_flash_executor.sh  test_gateio_ccxt.py
07_Scripts/: ChatGPT Exporter-2.30.0.user.js  copythatpay_micro.py  create_live_flash_arb.sh  create_live_flash_arb_v2.sh  gptbridge-provenance.user.js
08_Data_Files/: DEMO_LOG_SUCCESSFUL_RUN.txt  symbols.json  trades.jsonl
bitcoin-bearer-notes/programs/bitcoin-bearer-notes/: Cargo.toml
bitcoin-bearer-notes/programs/bitcoin-bearer-notes/src/: lib.rs
membra-chat-to-chain/programs/membra_qr_gateway/programs/membra_qr_gateway/: Cargo.toml
membra-chat-to-chain/programs/membra_qr_gateway/programs/membra_qr_gateway/src/: errors.rs  events.rs  lib.rs  state.rs
membra-chat-to-chain/programs/membra_qr_gateway/programs/membra_qr_gateway/src/instructions/: initialize_artifact.rs  mod.rs  support_artifact.rs  update_artifact.rs
membra_genesis/cpp/: CMakeLists.txt
membra_genesis/cpp/include/: consensus.hpp
membra_genesis/cpp/src/: consensus.cpp  main.cpp
membra_genesis/rust/: Cargo.toml  build.rs
membra_genesis/rust/src/: ffi.rs  genesis.rs  lib.rs  main.rs  solana_fallback.rs
membra_l3_runtime/runtime/: Cargo.toml
membra_l3_runtime/runtime/src/: consensus.rs  lib.rs  main.rs  network.rs  proof.rs  state.rs  transaction.rs
(+1384 files in other folders)
