[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.5"]
build-backend = "hatchling.build"

[project]
name = "jupyter-distributed-kernel"
version = "0.1.0"
description = "JupyterLab extension for distributed compute kernels backed by participant devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "distkernel contributors"}]
dependencies = [
    "jupyter_server>=2.0.0",
    "jupyter_client>=8.0.0",
    "jupyterlab>=4.0.0,<5",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "build"]

[project.scripts]
distkernel-gateway = "distkernel.gateway.server:main"
distkernel-worker = "distkernel.worker.agent:main"

[project.entry-points."jupyter_client.kernel_provisioners"]
distributed-provisioner = "distkernel.provisioner:DistributedProvisioner"

[tool.hatch.build.targets.wheel.shared-data]
"distkernel/labextension/static" = "share/jupyter/labextensions/jupyter-distributed-kernel/static"
"distkernel/labextension/install.json" = "share/jupyter/labextensions/jupyter-distributed-kernel/install.json"
"distkernel/labextension/package.json" = "share/jupyter/labextensions/jupyter-distributed-kernel/package.json"
"distkernel/kernelspec" = "share/jupyter/kernels/distributed"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["distkernel/labextension/static/index.js"]
skip-if-exists = ["distkernel/labextension/static/index.js"]
dependencies = ["hatch-jupyter-builder>=0.5"]
