[package]
name = "membra-genesis-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
