[package]
name = "membra-l3-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
