[package]
name = "membra_qr_gateway"
version = "0.1.0"
description = "MEMBRA QR Gateway — Artifact support receipts on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_qr_gateway"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
